# D-XOBS

./: .gitignore  CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements-core.txt  requirements.txt
configs/: example_manifest.json
data/: README.md
docs/: GITHUB_RELEASE_CHECKLIST.md  SCRIPT_INVENTORY.md
legacy/: README.md
legacy/core_pipeline/: interpretation_readiness_v5.py  observation_scale_experiment_v4.py  observation_scale_experiment_v5.py
legacy/diagnostics_and_audits/: compare_feature_spaces_v1.py  high_bp_diagnostic_v1.py  serious_filter_v1.py  top48_hgnc_alias_audit.py
legacy/dual_d_and_reconstruction/: bp_enrichment_state_reconstruction_v1_0.py  brca_state_validation_v2_1_complete.py  brca_state_validation_v2_2_fast_resume.py  dual_d_bp_enrichment_v1.py  dual_d_from_scratch_v1_0_complete.py  dual_d_full_pipeline_v1_0.py  dual_d_full_pipeline_v1_1_fixed.py  endpoint_bp_enrichment_v1_0.py
legacy/endpoint_stress_tests/: gse96058_external_v2.py  metabric_external_v2.py  tcga_brca_er_status_esr1_excluded_v2.py  tcga_brca_er_status_v1.py  tcga_new_target_v1.py
scripts/: run_core_analysis.py  scoring_sensitivity_analysis.py
src/aido_d_xobs/: __init__.py  core.py
tests/: test_core_smoke.py
